fix auth in theme and translate

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -2,5 +2,18 @@
     "login": "تسجيل الدخول",
     "register": "إنشاء حساب",
     "en": "انكليزي",
-    "ar": "عربي"
+    "ar": "عربي",
+    "login_intro": "قم بتسجيل الدخول إلى حسابك واستكشف عالمًا من الإمكانيات. رحلتك تبدأ هنا.",
+    "reg_intro": "أدخل معلوماتك للتسجيل",
+    "username": "اسم المستخدم",
+    "password": "كلمة المرور",
+    "c_password": "تأكيد كلمة المرور",
+    "email": "الحساب",
+    "not_account":"ليس لديك حساب؟   ",
+    "have_account":"لديك حساب   ",
+    "login_here":"سجل دخول",
+    "reg_here": "انشاء حساب",
+
+    "required": "هذا الحقل مطلوب",
+    "email_valid": "أدخل ايميل صحيح"
 }
