add check in and check out

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -8,8 +8,8 @@
     "password": "Password",
     "c_password": "Confirm Password",
     "email": "Email",
-    "not_account":"Dont have an account",
-    "have_account":"have an account",
+    "not_account":"Dont have an account?",
+    "have_account":"have an account?",
     "login_here":"Login here",
     "reg_here": "Register here",
     "reg_intro": "Enter your information to register",
