transation group and refactor design update group

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -8,12 +8,48 @@
     "username": "اسم المستخدم",
     "password": "كلمة المرور",
     "c_password": "تأكيد كلمة المرور",
-    "email": "الحساب",
+    "email": "البريد الالكتروني",
     "not_account":"ليس لديك حساب؟   ",
     "have_account":"لديك حساب   ",
     "login_here":"سجل دخول",
     "reg_here": "انشاء حساب",
 
     "required": "هذا الحقل مطلوب",
-    "email_valid": "أدخل ايميل صحيح"
+    "email_valid": "أدخل ايميل صحيح",
+    "groups": "المجموعات",
+    "group_id": "رقم المجموعة",
+    "group_name": "اسم المجموعة",
+    "edit_group": "تعديل المجموعة",
+    "create_group": "إنشاء مجموعة",
+    "manage_group": "إدارة المجموعة",
+    "search_users": "البحث عن المستخدمين",
+    "add_user": "إضافة مستخدم",
+    "remove_user": "إزالة مستخدم",
+    "update_group": "تحديث المجموعة",
+    "member_count": "عدد الأعضاء",
+    "created_by": "تم إنشاؤها بواسطة",
+    "view_files": "عرض الملفات",
+    "no_groups_found": "لم يتم العثور على مجموعات",
+    "add_one": "إضافة مجموعة",
+    "admin": "المسؤول",
+    "members": "الأعضاء",
+    "action": "الإجراء",
+    "role": "الدور",
+    "name": "الاسم",
+    "close": "إغلاق",
+    "loading": "جار التحميل...",
+    "search": "بحث",
+    "no_results_found": "لم يتم العثور على نتائج",
+    "search_placeholder": "ابحث عن المستخدمين بالاسم...",
+    "confirm_password": "تأكيد كلمة المرور",
+    "not_found": "غير موجود",
+    "error_occurred": "حدث خطأ",
+    "retry": "إعادة المحاولة",
+    "success": "تم بنجاح",
+
+    "create_new_group": "إنشاء مجموعة جديدة",
+    "edit_group_label": "تعديل المجموعة:",
+    "user_name": "الاسم",
+    "actions": "الإجراءات",
+    "remove": "إزالة"
 }
