--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -15,5 +15,42 @@
     "reg_intro": "Enter your information to register",
     
     "required": "this field is required",
-    "email_valid": "insert a valid email"
+    "email_valid": "insert a valid email",
+
+    "groups": "Groups",
+    "group_id": "Group ID",
+    "group_name": "Group Name",
+    "edit_group": "Edit Group",
+    "create_group": "Create Group",
+    "manage_group": "Manage Group",
+    "search_users": "Search Users",
+    "add_user": "Add User",
+    "remove_user": "Remove User",
+    "update_group": "Update Group",
+    "member_count": "Member Count",
+    "created_by": "Created By",
+    "view_files": "View Files",
+    "no_groups_found": "No Groups Found",
+    "add_one": "Add One",
+    "admin": "Admin",
+    "members": "Members",
+    "action": "Action",
+    "role": "Role",
+    "name": "Name",
+    "close": "Close",
+    "loading": "Loading...",
+    "search": "Search",
+    "no_results_found": "No Results Found",
+    "search_placeholder": "Search users by name...",
+    "confirm_password": "Confirm Password",
+    "not_found": "Not Found",
+    "error_occurred": "An Error Occurred",
+    "retry": "Retry",
+    "success": "Success",
+
+    "create_new_group": "Create New Group",
+    "edit_group_label": "Edit Group:",
+    "user_name": "Name",
+    "actions": "Actions",
+    "remove": "Remove"
 }
