--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -52,5 +52,29 @@
     "edit_group_label": "Edit Group:",
     "user_name": "Name",
     "actions": "Actions",
-    "remove": "Remove"
+    "remove": "Remove",
+
+    "appDashboard":"AppDashboard",
+    "allgroups":"All Groups",
+    "allusers":"All Users",
+    "topUsers": "Top User Group",
+    "mostActive": "Most Active User",
+    "topFiles": "File-Heavy Group",
+    "groupsTip":"Manage All Groups In The System",
+    "usersTip":"Manage All Users In The System",
+    "groupsFetchCorrectly":"All Groups Has Been Fetch Correctly",
+    "deletUser?":"Are you sure you want to delete this user ?",
+    "deleteWarning":"You won't be able to revert this!",
+    "confirmDeleting":"Yes , delete it ",
+    "deletingDone":"Deleted!",
+    "deletingUserSuccessfullyMsg":"User Has Been Deleted Successfully !",
+    "deletGroup?":"Are you sure you want to delete this Grpup ?",
+    "deletingGroupSuccessfullyMsg":"Group Has Been Deleted  Successfully !",
+    "deletFile?":"Are you sure you want to delete this File ?",
+    "deletingFileSuccessfullyMsg":"File Has Been Deleted  Successfully !",
+    "manageFiles":"Manage Files",
+    "manageMembers":"Manage Members",
+    "membersIn":"Members In This Group:",
+    "filesIn":"Files In This Group:",
+    "noFilesYet":"There Is Now File In This Group Yet ! "
 }
