--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -118,4 +118,10 @@
     "get_started": "Get Started Now",
 
     "view_operations" : "View Operations"
+
+    // "home": "Home",
+    // "about": "About",
+    // "users": "Users",
+    // "notifications": "Notifications",
+    // "sourceSafe": "SOURCE SAFE"
 }
