design group refactor

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -122,5 +122,10 @@
     "about": "حول",
     "users": "المستخدمون",
     "notifications": "الإشعارات",
-    "sourceSafe": "SOURCE SAFE"
+    "sourceSafe": "SOURCE SAFE",
+
+    "download_csv": "تحميل ملف CSV",
+    "downloading_csv": "جاري تحميل ملف CSV...",
+    "download_pdf": "تحميل ملف PDF",
+    "downloading_pdf": "جاري تحميل ملف PDF..."
 }
