redesign file operations

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -122,5 +122,6 @@
     "about": "حول",
     "users": "المستخدمون",
     "notifications": "الإشعارات",
+    "operations": "العمليات",
     "sourceSafe": "SOURCE SAFE"
 }
