--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -116,6 +116,7 @@
     "real_time_updates": "Enjoy real-time updates and notifications.",
     "access_logs": "Access logs and reports to track progress.",
     "get_started": "Get Started Now",
+    "operations": "operations",
 
     "view_operations" : "View Operations"
 }
