fix checkout and activate file

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -115,7 +115,7 @@
     "real_time_updates": "استمتع بالتحديثات والإشعارات الفورية.",
     "access_logs": "الوصول إلى السجلات والتقارير لتتبع التقدم.",
     "get_started": "ابدأ الآن",
-
+    "activated_file": "تم تغيير حالة الملف الى فعال",
     "view_operations" : "عرض العمليات",
 
     "home": "الرئيسية",
